--- a/SparkSQL-DEMO/dataframe.ipynb
+++ b/SparkSQL-DEMO/dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def getSC(master='spark://bi-hd03.vpon.idc:7077', appName='test'):\n",
+    "def getSC(master, appName='test', cores='10', mem='10g'):\n",
     "    if not master:\n",
     "        raise ValueError('master is not set')\n",
-    "    sparkEnv={\"spark.cores.max\":\"80\",\n",
+    "    sparkEnv={\"spark.cores.max\":cores,\n",
     "              \"spark.driver.memory\":\"5g\",\n",
-    "              \"spark.executor.memory\":\"10g\"}\n",
+    "              \"spark.executor.memory\":mem}\n",
     "    conf = SparkConf()\n",
     "    conf.setMaster(master)\n",
     "    conf.setAppName(appName)\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "sc, sqlContext=getSC()"
+    "sc, sqlContext=getSC('spark://bi-hd03:7077','dataframe',cores='80',mem='10g')"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -347,18 +347,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+\n",
+      "|anInt|\n",
+      "+-----+\n",
+      "|    1|\n",
+      "|    2|\n",
+      "|    3|\n",
+      "+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "eDF.select(explode(eDF.intlist).alias(\"anInt\")).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
