--- a/SparkSQL-DEMO/interactWithHive.ipynb
+++ b/SparkSQL-DEMO/interactWithHive.ipynb
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "sql = \"\"\"create table temp.titanic \n",
+    "sql = \"\"\"create table titanic \n",
     "(\n",
     "id  int,\n",
     "survival int,\n",
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "load_file_hive_table('temp.titanic', '/home/bryan/workspace/SparkTutorial/data/titanic2.txt')"
+    "load_file_hive_table('titanic', '/home/cloudera/SparkTutorial/data')"
    ]
   },
   {
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "select_hive_table('select * from temp.titanic limit 10')"
+    "select_hive_table('select * from titanic limit 10')"
    ]
   },
   {
@@ -308,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "df = sqlContext.sql(\"select * from temp.titanic\")"
+    "df = sqlContext.sql(\"select * from titanic\")"
    ]
   },
   {
