--- a/SparkSQL-DEMO/interactWithHive.ipynb
+++ b/SparkSQL-DEMO/interactWithHive.ipynb
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "load_file_hive_table('titanic', '/home/cloudera/SparkTutorial/data')"
+    "load_file_hive_table('titanic', '/home/cloudera/SparkTutorial/data/titanic2.txt')"
    ]
   },
   {
